--- a/index.html
+++ b/index.html
@@ -579,6 +579,7 @@
         </div>
     </div>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
     <script>
         // Global variables
         let datosOriginales = null;
