--- a/index.html
+++ b/index.html
@@ -338,6 +338,21 @@
             text-align: center;
         }
 
+        .table-header h3 {
+            color: white !important;
+            margin: 0 0 10px 0;
+            font-size: 1.8em;
+            text-align: center;
+        }
+
+        .table-header h4 {
+            color: white !important;
+            margin: 8px 0;
+            font-size: 1.2em;
+            text-align: center;
+            font-weight: 600;
+        }
+
         .table-scroll {
             max-height: 600px;
             overflow-y: auto;
