--- a/index.html
+++ b/index.html
@@ -525,20 +525,7 @@
                     </div>
                 </div>
                 
-                <div id="info_dataset" style="display: none;">
-                    <h4>📊 Información del Dataset:</h4>
-                    <div id="dataset_info"></div>
-                    
-                    <h4>📋 Vista Previa de Datos:</h4>
-                    <div class="table-container">
-                        <div class="table-scroll">
-                            <table id="preview_table">
-                                <thead></thead>
-                                <tbody></tbody>
-                            </table>
-                        </div>
-                    </div>
-                </div>
+                <!-- Sección de información del dataset eliminada -->
             </div>
         </div>
 
@@ -546,7 +533,7 @@
         <div id="indicadores" class="tab-content">
             <div class="card">
                 <div class="table-header">
-                    <h4>INDICADORES DE CARTERA DE CRÉDITO - BDE</h4>
+                    <h3>INDICADORES DE CARTERA DE CRÉDITO - BDE</h3>
                     <h4>2.3.3.2 COBERTURA DE PROVISIONES POR SEGMENTO</h4>
                     <h4>2.3.3.3 CALIDAD DE CARTERA POR SEGMENTOS DE CRÉDITO</h4>
                     <h4 id="fecha_indicadores">📅 Período de análisis: No disponible</h4>
